--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img width="200px" src="Images/Jay Headshot.jpg" alt"Jay Headshot" />
+      <td><img width="200px" src="/Images/Jay Headshot.jpg" alt"Jay Headshot" />
 
       </td>
       <td>
